--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
+    "vitals": "^0.1.2",
+    "web": "^0.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
