--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
+    "react-router": "^7.7.1",
     "vitals": "^0.1.2",
     "web": "^0.0.2"
   },
